# faircoding

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md.bak  documentation.md  package-lock.json  package.json  repo_id_query.graphql
anchor/: Anchor.toml
anchor/programs/faircoding/src/: lib.rs
anchor/programs/faircoding/src/accounts_ix/: mint_repo.rs  mod.rs  pay_deps.rs  user.rs
anchor/programs/faircoding/src/instructions/: pay_deps.rs  repo.rs
anchor/tests/: faircoding.ts
api/: events.rs
api/account/: create-user.rs
lib/: create_repo.rs  create_user.rs  error.rs  lib.rs  repo_id_query.rs
lib/models/: mod.rs  repo.rs  user.rs
programs/faircoding/: Cargo.toml
programs/faircoding/src/: error.rs  lib.rs  util.rs
programs/faircoding/src/accounts_ix/: add_dependency.rs  mod.rs  repo.rs  withdraw_vault.rs
programs/faircoding/src/instructions/: mod.rs
programs/faircoding/src/state/: debt.rs  dependency.rs  mod.rs  repo.rs  user.rs  user_vault.rs
src/app/: layout.tsx
src/app/faircoding/: page.tsx
src/components/: app-header.tsx
src/components/faircoding/: faircoding-data-access.tsx  faircoding-feature.tsx  faircoding-ui.tsx
tests/: faircoding.ts
